[package]
name = "bulan-server"
version = "0.1.0"
authors = ["The Bulan Developers <dev@bulan.io>"]
edition = "2021"
description = "The bulan.io Backend Server"
repository = "https://github.com/bulan-io/bulan-server"
license = "MIT OR Apache-2.0"

[dependencies]
axum = "0.5.17"
clap = { version = "3.2", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.26"
color-eyre = "0.6.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
